# rpi

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
core/: settings.py  urls.py
rpi/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
rpi/migrations/: 0001_initial.py  0002_alter_apreensao_unidade_medida_and_more.py  0002_alter_apreensao_unique_together.py  0002_alter_ocorrencia_data_hora_fato.py  0002_alter_relatoriodiario_data_fim.py  0002_ocorrencia_tipo_acao_alter_ocorrencia_bairro_and_more.py  0003_apreensao_descricao_adicional.py  0003_auto_20260123_1936.py  0003_ocorrenciaimagem.py  0004_alter_apreensao_unidade_medida_and_more.py  0004_alter_materialapreendidotipo_options.py  0004_ocorrencia_instrumento.py  0005_envolvido_foto_historicalenvolvido_foto.py  0005_naturezaocorrencia_tags_busca.py  0006_alter_envolvido_antecedentes.py  0006_popular_tags_cvli.py  0007_alter_envolvido_tipo_documento_and_more.py  0007_alter_envolvido_tipo_participante.py  0008_envolvido_nr_documento_envolvido_tipo_documento.py  0009_alter_envolvido_antecedentes_and_more.py  0010_alter_envolvido_tipo_participante.py  0011_alter_envolvido_antecedentes.py  0012_alter_envolvido_nr_documento_and_more.py  0013_alter_envolvido_antecedentes.py  0014_historicalapreensao_historicalenvolvido_and_more.py  0015_historicalmunicipio_historicalnaturezaocorrencia_and_more.py  0016_auditcleanuplog.py  0017_alter_historicalnaturezaocorrencia_nome_and_more.py
rpi/templates/: base.html  navbar.html
(+39 files in other folders)
