[project]
name = "relatorio-periodico"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Weber",email = "pablo.weber@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "weasyprint (>=67.0,<68.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
